@@ -9,6 +9,7 @@ import java.util.stream.Stream;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.example.backend.chat.dto.ChatResponse;
 import com.example.backend.chat.dto.ChatRoomDto;
 import com.example.backend.chat.dto.MessageDto;
 import com.example.backend.chat.entity.ChatMessage;
@@ -17,6 +18,7 @@ import com.example.backend.chat.repository.ChatMessageRepository;
 import com.example.backend.chat.repository.ChatRoomRepository;
 import com.example.backend.user.entity.User;
 import com.example.backend.user.repository.UserRepository;
+import com.example.backend.util.security.UserDetailsImpl;
 
 import lombok.RequiredArgsConstructor;
 
@@ -51,10 +53,20 @@ public class ChatService {
 		chatMessageRepository.save(newChatMessage);
 	}
 
-	public List<ChatMessage> getAllMessages(String roomName) {
+	public ChatResponse getAllMessages(String roomName , UserDetailsImpl userDetails) {
 		ChatRoom chatRoom = chatRoomRepository.findByRoomName(roomName)
 			.orElseThrow(() -> new NullPointerException("채팅방이 존재하지 않습니다."));
-		return chatRoom.getChatMessage();
+		User sender = chatRoom.getSender();
+		User receiver = chatRoom.getReceiver();
+
+		ChatResponse chatResponse = new ChatResponse();
+		chatResponse.changeToMessageDto(chatRoom.getChatMessage());
+		if(userDetails.getUser().getUserId()==sender.getUserId()){
+			chatResponse.setNickname(receiver.getNickname());
+		}else{
+			chatResponse.setNickname(sender.getNickname());
+		}
+		return chatResponse;
 	}
 
 	public List<ChatRoomDto> getAllRooms(Long userId) {  //이러면 다른사람 채팅방 목록도 볼 수 있음 토큰에서 가져와야할듯
@@ -64,6 +76,6 @@ public class ChatService {
 		List<ChatRoom> sent = user.getSentChatRooms(); // 이 부분을 올바르게 변경
 		return Stream.concat(received.stream(), sent.stream())
 			.sorted(Comparator.comparing(ChatRoom::getModifiedAt).reversed()).map(ChatRoomDto::new)
-			.collect(Collectors.toList());
+			.toList();
 	}
 }
